# picmgr

./: .gitignore  mise.toml
server/: Cargo.toml
server/migrations/: 20251207133528_create_user.sql  20251209103622_create_image.sql  20251212064659_replace_image_thumbnail_keys_with_status.sql  20251215065400_unattach_storage_info_from_image.sql  20251231145048_replace_category_with_album.sql  20260101090831_album_update_trigger.sql  20260103115441_image_update_trigger.sql  20260103125518_use_timestamptz.sql  20260103144427_image_add_trashed_state.sql  20260105071134_add_image_album_pos_seq.sql
server/queries/: add_image_to_album.sql  search_image.sql  search_image_count.sql
server/src/: lib.rs  main.rs  router.rs
server/src/api/: auth.rs  claims.rs  doc.rs  error.rs  jwt.rs  mod.rs  pagination.rs  stats.rs  user.rs  users.rs
server/src/api/albums/: add_image.rs  create_album.rs  delete_album.rs  get_album.rs  get_image.rs  get_stats.rs  mod.rs  remove_image.rs  router.rs  update_album.rs  utils.rs
server/src/api/auth/: login.rs  mod.rs  refresh.rs  register.rs  router.rs
server/src/api/claims/: access.rs  admin.rs  any.rs  mod.rs  refresh.rs  token.rs  user.rs  utils.rs
server/src/api/images/: get.rs  get_meta.rs  get_raw.rs  get_stats.rs  get_thumbnail.rs  mod.rs  response.rs  router.rs  search.rs  sign.rs  tag.rs  trash.rs  update_meta.rs  upload.rs  utils.rs
server/src/api/trash/: delete.rs  get_images.rs  mod.rs  restore.rs  router.rs
server/src/api/user/: get_current.rs  mod.rs  router.rs
server/src/api/users/: get_info.rs  get_stats.rs  mod.rs  router.rs
server/src/auth/: admin.rs  jwt.rs  mod.rs  password.rs  sign.rs
server/src/db/: image.rs  mod.rs  pagination.rs  pool.rs  user.rs
server/src/db/album/: add_image.rs  create_album.rs  delete_album.rs  get_album.rs  get_image.rs  get_permission.rs  get_stats.rs  mod.rs  remove_image.rs  update_album.rs
server/src/db/image/: create.rs  delete.rs  get_meta.rs  get_permission.rs  get_stats.rs  get_storage.rs  mod.rs  search.rs  set_thumbnail.rs  tag.rs  trash.rs  update_meta.rs
server/src/db/user/: create.rs  get.rs  get_stats.rs  mod.rs
server/src/image/: hash.rs  mod.rs  parse.rs  storage.rs  thumbnail.rs
webui/: .gitignore  components.json  eslint.config.js  index.html  (+5 more)
(+115 files in other folders)
