[package]
name = "picmgr-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
