[package]
name = "picmgr-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
base64 = "0.22.1"
blake3 = { version = "1.8.2", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"]}
headers = "0.4.1"
hmac-sha256 = "1.1.12"
image = { version = "0.25.9", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
utoipa = { version = "5.4.0", features = ["chrono", "axum_extras", "preserve_order"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = "0.20.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
